# trait-driven-rust-architecture

./: Cargo.toml  README.md
.cargo/: config.toml
src/: error.rs  lib.rs  prelude.rs
src/domain/: mod.rs  state.rs  user.rs  vault.rs
src/infra/: storage.rs
src/traits/: mod.rs  owner.rs  serialize.rs
tests/: integration.rs
